labs/network-review/deny-all.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: deny-all
spec:
  podSelector: INSERT THE POD SELECTOR HERE
  ingress: []
